feat: creating and listing products
