# 39/internal/infra/webserver/handlers/product_handlers.go
@@ -22,6 +22,17 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	}
 }
 
+// Create Product godoc
+// @Summary      Create Product
+// @Description  Create Product
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        request  body      dto.CreateProductInput  true  "product request"
+// @Sucess			 201
+// @Failure      500	{object}  Error
+// @Router       /products [post]
+// @Security ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var product dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&product)
@@ -42,6 +53,19 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 }
 
+// Create Product godoc
+// @Summary      List Products
+// @Description  List Products
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        page    query     string  false  "page number"
+// @Param        limit	 query     string  false  "limit"
+// @Sucess			 200	   {array}   entity.Product
+// @Failure      404     {object}  Error
+// @Failure      500	   {object}  Error
+// @Router       /products [get]
+// @Security ApiKeyAuth
 func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
